--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1731,6 +1731,7 @@
   <string id="19212">List contains changes</string>
   <string id="19213">Select channel client</string>
   <string id="19214">Enter a valid URL for the new channel</string>
+  <string id="19215">The PVR-Server don't support Timers!</string>
 
   <string id="19499">Other/Unknown</string>
   <string id="19500">Movie/Drama</string>
