--- a/addons/skin.pm3-hd/language/English/strings.xml
+++ b/addons/skin.pm3-hd/language/English/strings.xml
@@ -3,7 +3,7 @@
   <string id="31000">Volume muted</string>
   <string id="31001">Working...</string>
   <string id="31002">Live TV</string>
-  <string id="31003"></string>
+  <string id="31003">Timer</string>
   <string id="31004"></string>
   <string id="31005"></string>
   <string id="31006"></string>
