--- a/addons/visualization.milkdrop/resources/language/Chinese (Simple)/strings.xml
+++ b/addons/visualization.milkdrop/resources/language/Chinese (Simple)/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
     <!-- settings labels -->
     <string id="30000">自动混合时间</string>
