--- a/addons/skin.pm3-hd/language/English/strings.xml
+++ b/addons/skin.pm3-hd/language/English/strings.xml
@@ -82,6 +82,7 @@
   <string id="31114">Multi Image</string>
   <string id="31115">Replace Audio Settings Button with Teletext</string>
   <string id="31116">Hide Video flag images in media views</string>
+  <string id="31117">Show Live TV Info</string>
 
   <!-- Script Settings labels -->
   <string id="31200">Custom script options</string>
